<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wi-Fi_P2P_test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_status">My name: Unknown. \nMy Address: Unknown. \nMy status: Unknown.</string>
    <string name="search_pears">Search pears</string>
    <string name="available_devices">available devices</string>
    <string name="create_group">Create Group</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="remove_group">Remove group</string>
    <string name="choose_file">Choose file</string>
    <string name="restart_wifi">Restart wifi</string>
    
</resources>
