<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.invizorys.wi_fi_p2p_test.MainActivity" >

    <TextView
        android:id="@+id/mystatus_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_status" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/search_pears" />

    <Button
        android:id="@+id/create_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_group" />

    <Button
        android:id="@+id/remove_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/remove_group" />

    <Button
        android:id="@+id/choose_file_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/choose_file" />
    
    <Button android:id="@+id/restart_wifi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_wifi"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/available_devices" />

    <fragment
        android:id="@+id/devicelist"
        android:name="com.invizorys.wi_fi_p2p_test.DeviceListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>